update: features padding (10/02/2022)

--- a/style.css
+++ b/style.css
@@ -26,9 +26,10 @@ p {
 
 .container {
     width: 100%;
-    max-width: 1170px;
+    max-width: 1080px;
     margin: 0 auto;
-    padding: 0 15px;
+    /*padding: 0 15px;*/
+
 }
 
 
