--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ p {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-image:url("img/Ceylon.webp");
+    background-image:url("img/Ceylon.jpg");
     width: 1510px;
     padding-top: 100px;
     background-attachment: fixed;
